@@ -113,6 +113,9 @@ GLIBMM_CHECK_PERL([5.6.0])
 # We need an always-false condition in docs/Makefile.am.
 AM_CONDITIONAL(LIBXMLCPP_FALSE,[false])
 
+# HACK:  Assign a dummy in order to prevent execution of autoheader by the
+# maintainer-mode rules.  That would fail since we aren't using autoheader.
+AUTOHEADER=':'
 
 AC_OUTPUT(
   Makefile
